# clio-mtr

./: .gitignore  .gitmodules  commands.md  pipeline.md  services.txt  topics.txt
.devcontainer/: Dockerfile  cyclonedds.xml  devcontainer-lock.json  devcontainer.json  requirements.txt  supervisord.conf
.devcontainer/scripts/: display-utils.sh  entrypoint.sh  post-create.sh  post-start.sh
debug_tools/: twist_plot_from_bag.py
src/bringup/: package.xml  setup.py
src/bringup/config/: downloaded_nav2_params.yaml  nav2_params.yaml  old_nav2_params.yaml  waypoints_example.yaml
src/bringup/launch/: cmu_debug.launch.py  cmu_mapping.launch.py  cmu_navigation.launch.py  detection.launch.py  localization.launch.py  mapping.launch.py  nav_bringup.launch.py  navigation.launch.py  register_localization.launch.py  visualize_lidar.launch.py
src/camera/head_controller/: CMakeLists.txt  package.xml
src/camera/head_controller/head_controller/: head_controller_node.py
src/camera/head_controller/msg/: HeadPose.msg
src/camera/realsense/: package.xml  setup.py
src/camera/realsense/launch/: camera.launch.py  record.launch.py
src/camera/realsense/realsense/: record.py
src/camera/realsense/rviz/: camera.rviz
src/control/tron1_control/: package.xml  setup.cfg  setup.py
src/control/tron1_control/tron1_control/: bridge.py
src/control/velocity_smoother/: CMakeLists.txt  package.xml
src/control/velocity_smoother/config/: smoother_params.yaml
src/control/velocity_smoother/launch/: smoother.launch.py
src/control/velocity_smoother/src/: ema_velocity_smoother.cpp
src/debug/: package.xml  setup.py
src/debug/debug/: path_stability_visualizer_node.py  realtime_twist_plotter_node.py  realtime_twist_stamped_plotter_node.py  twist_plotter_node.py
src/localization/cloud_aggregator/: CMakeLists.txt  package.xml
src/localization/cloud_aggregator/src/: cloud_aggregator_node.cpp
src/localization/localization_utils/: package.xml  setup.cfg  setup.py
src/localization/localization_utils/localization_utils/: cloud_register_rotator.py  pointcloud_rotator.py  pose_estimate_remapper.py  sensor_frame_corrector.py  static_odom_publisher.py  tf_height_remover.py
util_scripts/: get_map.sh
